--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@heroicons/react": "^2.2.0",
         "@hookform/resolvers": "^4.1.3",
+        "@mlc-ai/web-llm": "^0.2.79",
         "@octokit/core": "^6.1.4",
         "@phosphor-icons/react": "^2.1.7",
         "@radix-ui/colors": "^3.0.0",
