--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -4,9 +4,20 @@
     "exclude": ["/assets/*", "/creedava-widget.iife.js"]
   },
   "globalHeaders": {
-    "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
     "X-Content-Type-Options": "nosniff",
     "X-Frame-Options": "SAMEORIGIN",
     "Referrer-Policy": "strict-origin-when-cross-origin"
+  },
+  "routes": [
+    {
+      "route": "/*",
+      "allowedRoles": ["anonymous"]
+    }
+  ],
+  "responseOverrides": {
+    "404": {
+      "rewrite": "/index.html",
+      "statusCode": 200
+    }
   }
 }
