--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,24 @@ dist-ssr
 *.sln
 *.sw?
 
-
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Development files
 **/agent-eval-report*
-# Do not ignore the monorepo packages; ensure they are included in version control
-# packages
 pids
 .file-manifest
 .devcontainer/
-
 .spark-workbench-id
+spark.meta.json
+theme.json
+README_NEW.md
+README_CLEAN.md
+
+# Build artifacts
+*.tsbuildinfo
+
+# OS files
+Thumbs.db
