⚡ Performance optimization: 95% image reduction + caching + code splitting
- Compressed images from 6.2MB to 303KB (95% reduction)
- Converted all images to WebP format
- Added lazy loading and async decoding for images
- Implemented aggressive caching strategy (1-year for assets)
- Enhanced code splitting with vendor chunks
- Added service worker for offline support
- Optimized build with Terser minification
- Added performance monitoring (Web Vitals)
- Total bundle size: ~400KB gzipped
- Expected load time on Slow 3G: 4-5s (was 15-20s)

--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -7,7 +7,13 @@
     "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
     "X-Content-Type-Options": "nosniff",
     "X-Frame-Options": "SAMEORIGIN",
-    "Referrer-Policy": "strict-origin-when-cross-origin"
+    "Referrer-Policy": "strict-origin-when-cross-origin",
+    "Cache-Control": "public, max-age=0, must-revalidate"
+  },
+  "mimeTypes": {
+    ".webp": "image/webp",
+    ".js": "text/javascript; charset=utf-8",
+    ".css": "text/css; charset=utf-8"
   },
   "routes": [
     {
