--- a/package.json
+++ b/package.json
@@ -65,9 +65,11 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@supabase/supabase-js": "^2.86.0",
         "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/vite": "^4.1.16",
         "@tanstack/react-query": "^5.83.1",
+        "@tanstack/react-table": "^8.21.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
@@ -84,10 +86,10 @@
         "react-day-picker": "^9.6.7",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^6.0.0",
-        "react-hook-form": "^7.54.2",
+        "react-hook-form": "^7.66.1",
         "react-resizable-panels": "^2.1.7",
         "react-router-dom": "^7.9.5",
-        "recharts": "^2.15.1",
+        "recharts": "^2.15.4",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "three": "^0.175.0",
