--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,24 +1,41 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/assets/*", "/creedava-widget.iife.js"]
+    "exclude": ["/assets/*", "/creedava-widget.iife.js", "*.css", "*.js"]
   },
   "globalHeaders": {
     "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
     "X-Content-Type-Options": "nosniff",
     "X-Frame-Options": "SAMEORIGIN",
-    "Referrer-Policy": "strict-origin-when-cross-origin",
-    "Cache-Control": "public, max-age=0, must-revalidate"
-  },
-  "mimeTypes": {
-    ".webp": "image/webp",
-    ".js": "text/javascript; charset=utf-8",
-    ".css": "text/css; charset=utf-8"
+    "Referrer-Policy": "strict-origin-when-cross-origin"
   },
   "routes": [
     {
+      "route": "/assets/*",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "route": "*.js",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable",
+        "Content-Type": "text/javascript; charset=utf-8"
+      }
+    },
+    {
+      "route": "*.css",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable",
+        "Content-Type": "text/css; charset=utf-8"
+      }
+    },
+    {
       "route": "/*",
-      "allowedRoles": ["anonymous"]
+      "allowedRoles": ["anonymous"],
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate"
+      }
     }
   ],
   "responseOverrides": {
@@ -26,5 +43,11 @@
       "rewrite": "/index.html",
       "statusCode": 200
     }
+  },
+  "mimeTypes": {
+    ".webp": "image/webp",
+    ".js": "text/javascript; charset=utf-8",
+    ".css": "text/css; charset=utf-8",
+    ".json": "application/json"
   }
 }
