--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # Environment Variables
 
-# Supabase Configuration
+# Azure Functions API (for LinkedIn integration and data)
+VITE_API_URL=/api
+
+# Google Analytics (optional)
+VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Supabase Configuration (still used for auth during migration)
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
@@ -10,3 +16,6 @@ VITE_GOOGLE_SEARCH_CONSOLE_API_KEY=your_google_api_key
 
 # Application
 VITE_APP_URL=https://www.creedava.com
+
+# Build Configuration (use / for Azure, /CreedaVA/ for GitHub Pages)
+VITE_BASE_PATH=/
