Production cleanup: rename database references
- Renamed src/lib/supabase.ts -> database.ts
- Changed 'supabase' variable to 'db' throughout codebase
- Updated env comments to remove vendor-specific naming
- Cleaned up EnvCheck diagnostic messages

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@ VITE_API_URL=/api
 # Google Analytics (optional)
 VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
-# Supabase Configuration (still used for auth during migration)
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# Database Configuration (authentication and content storage)
+VITE_SUPABASE_URL=your_database_url
+VITE_SUPABASE_ANON_KEY=your_database_key
 
 # Google Search Console API
 VITE_GOOGLE_SEARCH_CONSOLE_CLIENT_ID=your_google_client_id
