--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/assets/*", "/creedava-widget.iife.js", "*.css", "*.js"]
+    "exclude": ["/api/*", "/assets/*", "/creedava-widget.iife.js", "*.css", "*.js"]
   },
   "globalHeaders": {
     "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
